--- a/CHANGES.txt
+++ b/CHANGES.txt
@@ -1,7 +1,10 @@
 Trait-Documenter CHANGELOG
 ==========================
 
-Release 0.1.0
+Release 1.0.0
 -------------
 
+* Add travis-ci testing.
+* Add basic tests.
+* Use the python ast module to recover the trait definitions.
 * Factor out trait-documenter from the traits source.
